--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Cole Abbeduto",
   "license": "ISC",
   "dependencies": {
+    "prompt": "^1.0.0",
     "socket.io-client": "^2.0.4"
   }
 }
