Added .idea/ to the .gitignore and changed the send-data script to start for conformity reasons

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "simulator.js",
   "scripts": {
-    "send-data": "node simulator.js"
+    "start": "node simulator.js"
   },
   "author": "Cole Abbeduto",
   "license": "ISC",
